# dct

./: CMakeLists.txt  Justfile  main.c
include/: dct.h  entropy.h  image.h  quantization.h  utils.h
src/: dct.c  entropy.c  image.c  quantization.c  utils.c
tests/: test_dct.c  test_entropy.c  test_image.c  test_quantization.c
